[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/houses.png" type="Texture" id=1]
[ext_resource path="res://Environment/House.gd" type="Script" id=2]
[ext_resource path="res://Assets/Delivered Sign.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 156.5, 156 )

[node name="House" type="Area2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 229, -300 )
z_index = -1
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -271 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 150.5, -146 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 165.5, -145 )
scale = Vector2( 30.35, 15.5 )

[connection signal="body_entered" from="." to="." method="_on_House_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_House_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
